--- a/jquery-bug.html
+++ b/jquery-bug.html
@@ -118,7 +118,7 @@
 
 
     <script src="https://code.jquery.com/jquery-1.12.0.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://rawgit.com/KidSysco/jquery-ui-month-picker/c4ce4d6ae9cf2d7a079e809e627c1bf9af40d1bc/MonthPicker.js"></script>
     <script src="javascripts/main.js" type="text/javascript"></script>
 </body>
