--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="jQuery UI Month Picker Plugin : jQuery UI Month Picker Plugin">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css" />
-    <link href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" media="all" rel="stylesheet" type="text/css" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="//rawgit.com/KidSysco/jquery-ui-month-picker/master/demo/Demo.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/site.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="MonthPicker.min.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="examples.css" />
 </head>
 
 <body>
@@ -216,10 +216,10 @@
         <input id="DialogDemo" class='Default' type="text" />
     </div>
 
-
-    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="//rawgit.com/KidSysco/jquery-ui-month-picker/master/demo/Demo.min.js"></script>
-    <script src="javascripts/main.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://cdn.rawgit.com/digitalBush/jquery.maskedinput/1.4.1/dist/jquery.maskedinput.min.js"></script>
+    <script src="MonthPicker.min.js"></script>
+    <script src="examples.js"></script>
 </body>
 </html>
