--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <title>jQuery UI Month Picker Plugin</title>
     <meta name="description" content="jQuery UI Month Picker Plugin : jQuery UI Month Picker Plugin">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css" />
-    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" media="all" rel="stylesheet" type="text/css" />
+    <link href="stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
 
-    <link rel="stylesheet" type="text/css" media="screen" href="MonthPicker.min.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="examples.css" />
+    <link href="MonthPicker.min.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="examples.css" />
+
+    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://cdn.rawgit.com/digitalBush/jquery.maskedinput/1.4.1/dist/jquery.maskedinput.min.js"></script>
+
+    <script src="MonthPicker.min.js"></script>
+    <script src="examples.js"></script>
 </head>
 
 <body>
@@ -41,8 +48,17 @@
                 has lots of options for date validation, setting the start year, using an icon button, input masking, internationalization,
                 localization and more.</p>
             <p>
-                <a href="https://travis-ci.org/KidSysco/jquery-ui-month-picker"><img src="https://travis-ci.org/KidSysco/jquery-ui-month-picker.svg?branch=master" alt="Travis CI" /></a>
-                <a href="http://gruntjs.com/" target="_blank"><img src="https://cdn.gruntjs.com/builtwith.png" alt="Built with Grunt" /></a>
+                <a href="https://travis-ci.org/KidSysco/jquery-ui-month-picker">
+                    <img src="https://travis-ci.org/KidSysco/jquery-ui-month-picker.svg?branch=master" alt="Travis CI" />
+                </a>
+
+                <a href="https://github.com/KidSysco/jquery-ui-month-picker/wiki#installation">
+                    <img src="https://img.shields.io/bower/v/jquery-ui-month-picker.svg">
+                </a>
+
+                <a href="http://gruntjs.com/" target="_blank">
+                    <img src="https://cdn.gruntjs.com/builtwith.png" alt="Built with Grunt" />
+                </a>
             </p>
 
             <h3>Default functionality</h3>
@@ -215,11 +231,5 @@
     <div id="Modal">Test:
         <input id="DialogDemo" class='Default' type="text" />
     </div>
-
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-    <script src="https://cdn.rawgit.com/digitalBush/jquery.maskedinput/1.4.1/dist/jquery.maskedinput.min.js"></script>
-    <script src="MonthPicker.min.js"></script>
-    <script src="examples.js"></script>
 </body>
 </html>
