--- a/demo/index.html
+++ b/demo/index.html
@@ -6,16 +6,16 @@
     <meta name="description" content="jQuery UI Month Picker Plugin : jQuery UI Month Picker Plugin">
 
     <link href="stylesheets/stylesheet.css" rel="stylesheet" type="text/css" />
-    <link href="https://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
+    <link href="https://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" rel="stylesheet" type="text/css" />
 
     <link href="MonthPicker.min.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="examples.css" />
 
-    <script src="https://code.jquery.com/jquery-1.12.1.min.js"></script>
-    <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://cdn.rawgit.com/digitalBush/jquery.maskedinput/1.4.1/dist/jquery.maskedinput.min.js"></script>
 
-    <script src="MonthPicker.min.js"></script>
+    <script src="../src/MonthPicker.js"></script>
     <script src="examples.js"></script>
 </head>
 
